Stop stretching of images

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ html {
     box-sizing: border-box
 }
 img {
+    display: inline;
+    width: 200px;
     height: 100px;
 }
 #footer {
@@ -83,7 +85,5 @@ body {
     text-shadow: 2px 2px 4px #000000;
 }
 .stop-stretch {
-    display: inline;
-    width: 200px;
-    height: 100px;
+    height: 50px;
 }
